--- a/deploy.yml
+++ b/deploy.yml
@@ -19,7 +19,7 @@ spec:
       imagePullSecrets:
         - name: countly-registry
       containers:
-      - image: gcr.io/cicd-conciliacaopdv/teste_image:v.0.0.1
+      - image: gcr.io/cicd-conciliacaopdv/teste_image:v0.0.1
         name: teste-image-gcr-container
         imagePullPolicy: Always
         resources:
